--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -433,7 +433,7 @@
   width: 35%;
 }
 
-.noticeLayout .inputBox{
+.noticeLayout .inputBox {
   width: 370px;
   height: 380px;
 }
@@ -2740,4 +2740,103 @@
 
 .message-inner::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
+}
+
+/* 블라인드 */
+.blind-Dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -65%);
+  width: 1000px;
+  border-radius: 30px;
+  z-index: 2;
+}
+.blind-container {
+  background-color: white;
+  padding: 30px;
+  text-align: left;
+  color: #777;
+}
+.blind-title {
+  /* font-size: 28px; */
+  letter-spacing: -1px;
+  font-weight: bold;
+  color: #333;
+  text-align: right;
+  display: inline-block;
+  font-size: 25px;
+  line-height: 30px;
+}
+.blind-close {
+  width: 30px;
+  background-color: #fddc00;
+  padding: 8px;
+  cursor: pointer;
+  /* display: inline-block; */
+  float: right;
+}
+.blindLayout {
+  margin-top: 20px;
+  width: 100%;
+  /* height: 675px;  */
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+  padding: 20px;
+  text-align: left;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.blindLayout::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+.blindWrapper.bot {
+  margin-top: 10px;
+  text-align: right;
+}
+.blindWrapper.bot .blindTitle {
+  font-size: 20px;
+  vertical-align: middle;
+  font-weight: bold;
+  color: #1890ff;
+}
+.blindWrapper.bot .mainTitle {
+  /* font-size: 20px; */
+  vertical-align: middle;
+  font-weight: bold;
+  width: 75px;
+}
+.blindWrapper.bot .subTitle {
+  font-size: 18px;
+  vertical-align: middle;
+  font-weight: bold;
+  /* width: 70px; */
+  margin-left: 20px;
+}
+.blindWrapper.bot .ant-checkbox-inner {
+  width: 20px;
+  height: 20px;
+}
+.blindWrapper.bot .override-input.sub {
+  /* margin-left: -30px; */
+  margin-left: 10px;
+  width: 150px;
+}
+.blindWrapper.bot .selectItem {
+  vertical-align: middle;
+}
+.blindWrapper.bot .override-select {
+  margin-left: 10px;
+  width: 230px;
+  font-size: 15px;
+  vertical-align: middle;
+}
+.blindWrapper.bot .callTab {
+  width: 185px;
+  height: 40px;
+  font-size: 18px;
+  /* margin-top: 12px; */
+  margin-left: 45px;
+  display: inline-block;
+  vertical-align: middle;
 }
