--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -433,7 +433,7 @@
   width: 35%;
 }
 
-.noticeLayout .inputBox{
+.noticeLayout .inputBox {
   width: 370px;
   height: 380px;
 }
@@ -2740,4 +2740,62 @@
 
 .message-inner::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
+}
+
+.selectLayout {
+  margin-left: 0;
+  margin-right: 1rem;
+}
+
+/* ModifyOrdeDialog */
+
+.modifyOrderLayout {
+  margin-top: 20px;
+  border: 1px solid #ccc;
+  padding: 10px 20px 20px;
+  text-align: left;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.modifyOrder-Dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* width: 1000px; */
+  border-radius: 30px;
+  z-index: 2;
+}
+.modifyOrder-container {
+  background-color: white;
+  padding: 30px;
+  text-align: left;
+  color: #777;
+}
+
+.modifyOrderWrapper {
+  display: inline-block;
+}
+
+.modifyOrderLayout .contentBlock {
+  margin-top: 1rem;
+}
+
+.modifyOrderLayout .mainTitle {
+  width: 8rem;
+}
+
+.modifyOrderBtn {
+  margin-top: 3rem;
+  text-align: center;
+}
+
+.orderPayment-wrapper {
+  display: flex;
+}
+
+.orderPayments-wrapper {
+  display: flex;
+  flex-direction: column;
 }
