--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2326,7 +2326,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
+  width: 1000px;
   border-radius: 30px;
   z-index: 2;
 }
@@ -2337,10 +2337,10 @@
   text-align: left;
   color: #777;
 }
-
-.registRider-Dialog .layout {
+.registRiderLayout {
   margin-top: 20px;
   width: 100%;
+  /* height:500px; */
   overflow-y: scroll;
   border: 1px solid #ccc;
   padding: 20px 20px;
@@ -2348,13 +2348,10 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
-.registRider-Dialog .layout::-webkit-scrollbar {
+.registRiderLayout::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
 }
 
-.registRdierWrapper .contentBlock {
-  margin-top: 25px;
-}
 
 .registRider-title {
   letter-spacing: -1px;
@@ -2373,6 +2370,10 @@
   /* display: inline-block; */
   float: right;
   padding: 8px;
+}
+
+.registRiderWrapper{
+  display: inline-block;
 }
 
 .registRiderWrapper .contentBlock {
@@ -2409,6 +2410,16 @@
 .registRiderWrapper .contentBlock .override-input {
   width: 260px !important;
 }
+
+/*오른쪽*/
+.registRiderWrapper.sub{
+  display: inline-block;
+  margin-left: 70px;
+}
+
+
+
+
 
 .registRider-Dialog .ant-btn {
   width: 130px;
