--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -3059,7 +3059,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 1320px;
+  width: 500px;
   border-radius: 30px;
   padding: 20px;
   z-index: 2;
@@ -3107,22 +3107,25 @@
   display: none; /* Chrome, Safari, Opera*/
 }
 
-.snsLayout .snslistBlock {
+/* .snsLayout .snslistBlock {
   float: left;
   width: 55%;
-}
+} */
 
 .snsLayout .snsDetailBlock {
-  float: right;
-  width: 40%;
+  margin:0 auto;
+  width: 100%;
+  /* border:1px solid red; */
 }
 
 .snsLayout .inputBox {
-  width: 370px;
+  width: 100%;
   height: 380px;
 }
 
 .snsLayout .snsInputBox {
-  width: 100%;
-  height: 380px;
+  width: 356px;
+  height: 370px;
+  margin-top:10px;
+  margin-left:-10px;
 }
