--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -36,6 +36,16 @@
   display: none; /* Chrome, Safari, Opera*/
 }
 
+.frNameTag {
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
+}
+
+.selMulti {
+  margin-left: 20px !important;
+}
+
 .searchFranchise-content {
   background-color: white;
   padding: 30px;
@@ -527,7 +537,7 @@
   margin-bottom: 5px;
 }
 
-.registBtn{
+.registBtn {
   float: right;
   margin-bottom: 5px;
 }
@@ -2382,10 +2392,9 @@
   margin-top: 25px;
 }
 
-.registRiderWrapper .ant-form-item-control-input-content{
-  width:260px;
+.registRiderWrapper .ant-form-item-control-input-content {
+  width: 260px;
 }
-
 
 .registRiderWrapper .mainTitle {
   width: 130px;
@@ -2430,12 +2439,12 @@
   font-size: 18px !important;
 }
 
-.giveBox{
+.giveBox {
 }
 
-.giveBox .ant-checkbox-wrapper{
-  width:86px;
-  margin:0px!important;
+.giveBox .ant-checkbox-wrapper {
+  width: 86px;
+  margin: 0px !important;
 }
 /*직원 등록*/
 .registStaff-Dialog {
@@ -3058,7 +3067,6 @@
   vertical-align: middle;
 }
 
-
 /*sns전송ㅇ*/
 .snsDialog {
   position: fixed;
@@ -3119,7 +3127,7 @@
 } */
 
 .snsLayout .snsDetailBlock {
-  margin:0 auto;
+  margin: 0 auto;
   width: 100%;
   /* border:1px solid red; */
 }
@@ -3132,6 +3140,6 @@
 .snsLayout .snsInputBox {
   width: 356px;
   height: 370px;
-  margin-top:10px;
-  margin-left:-10px;
+  margin-top: 10px;
+  margin-left: -10px;
 }
