--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -21,136 +21,6 @@
   margin-top: 0px !important;
 }
 
-/* 가맹점조회 */
-.searchFranchise-Dialog {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 800px;
-  border-radius: 30px;
-  z-index: 2;
-}
-
-.searchFranchise-Dialog .layout::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Opera*/
-}
-
-.searchFranchise-content {
-  background-color: white;
-  padding: 30px;
-  text-align: left;
-  color: #777;
-}
-
-.searchFranchise-title {
-  letter-spacing: -1px;
-  font-weight: bold;
-  color: #333;
-  text-align: right;
-  display: inline-block;
-  font-size: 25px;
-  line-height: 30px;
-}
-
-.searchFranchise-close {
-  width: 30px;
-  cursor: pointer;
-  background-color: #fddc00;
-  /* display: inline-block; */
-  float: right;
-  padding: 8px;
-}
-.searchFranchise-Dialog .layout {
-  margin-top: 20px;
-  width: 100%;
-  overflow-y: scroll;
-  border: 1px solid #ccc;
-  padding: 20px 20px;
-  text-align: left;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-
-.searchFranchise-Dialog .layout .contentBlock {
-  display: inline-block;
-  line-height: 20px;
-}
-
-.searchFranchise-Dialog .layout .contentBlock span {
-  font-size: 18px;
-}
-
-.searchFranchise-Dialog .layout .submitBtn {
-  float: right;
-}
-
-.searchFranchise-list {
-  display: inline-block;
-  vertical-align: bottom;
-  width: 100%;
-}
-.searchFranchise-list input {
-  width: 400px;
-}
-
-.searchFranchise-btn {
-  display: inline-block;
-  vertical-align: bottom;
-}
-
-.searchFranchise-btn .ant-btn-primary {
-  background-color: black;
-  border-style: none;
-}
-.searchFranchise-searchbox {
-  float: right;
-  margin: 20px 0;
-}
-
-.searchFranchise-Dialog .layout .dataTableLayout-01 {
-  margin-top: 30px;
-}
-
-.searchFranchise-Dialog .ant-table-content thead th {
-  padding: 10px;
-}
-
-.searchFranchise-Dialog .layout .ant-table-tbody > tr > td {
-  padding: 0;
-}
-
-/* 우편번호 팝업 */
-.postCode-Dialog {
-  position: fixed;
-  top: 20%;
-  left: 48%;
-  transform: translate(-50%, -50%);
-  width: 530px;
-  border-radius: 30px;
-  z-index: 3;
-}
-
-.postCode-Dialog-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.postCode-close {
-  width: 30px;
-  position: absolute;
-  right: -93px;
-  top: 7px;
-  cursor: pointer;
-  background-color: #fddc00;
-  padding: 8px;
-}
-
 /* 직원 수정 dialog */
 .updateStaff-Dialog-overlay {
   position: fixed;
@@ -512,7 +382,7 @@
 }
 
 .noticeLayout {
-  margin-top: 5px;
+  margin-top: 20px;
   width: 100%;
   overflow-y: scroll;
   border: 1px solid #ccc;
@@ -520,10 +390,6 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
   padding: 20px;
-}
-
-.deleteBox {
-  float: right;
 }
 
 .noticeDialog .container {
@@ -564,7 +430,7 @@
 
 .noticeLayout .noticeDetailBlock {
   float: right;
-  width: 40%;
+  width: 35%;
 }
 
 .noticeLayout .inputBox {
@@ -971,15 +837,6 @@
   margin-left: 20px;
   width: 300px;
 }
-
-.registFranWrapper .override-input.addrText {
-  width: 160px;
-}
-
-.registFranWrapper .override-input.addrBtn {
-  width: 120px;
-}
-
 /* 오른쪽 wrappper */
 .registFranWrapper.sub {
   vertical-align: top;
@@ -2330,7 +2187,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 1000px;
+  width: 500px;
   border-radius: 30px;
   z-index: 2;
 }
@@ -2341,10 +2198,10 @@
   text-align: left;
   color: #777;
 }
-.registRiderLayout {
+
+.registRider-Dialog .layout {
   margin-top: 20px;
   width: 100%;
-  /* height:500px; */
   overflow-y: scroll;
   border: 1px solid #ccc;
   padding: 20px 20px;
@@ -2352,8 +2209,12 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
-.registRiderLayout::-webkit-scrollbar {
+.registRider-Dialog .layout::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
+}
+
+.registRdierWrapper .contentBlock {
+  margin-top: 25px;
 }
 
 .registRider-title {
@@ -2373,10 +2234,6 @@
   /* display: inline-block; */
   float: right;
   padding: 8px;
-}
-
-.registRiderWrapper {
-  display: inline-block;
 }
 
 .registRiderWrapper .contentBlock {
@@ -2412,12 +2269,6 @@
 
 .registRiderWrapper .contentBlock .override-input {
   width: 260px !important;
-}
-
-/*오른쪽*/
-.registRiderWrapper.sub {
-  display: inline-block;
-  margin-left: 70px;
 }
 
 .registRider-Dialog .ant-btn {
@@ -2891,37 +2742,6 @@
   display: none; /* Chrome, Safari, Opera*/
 }
 
-.selectLayout {
-  margin-left: 0;
-  margin-right: 1rem;
-}
-
-/* ModifyOrdeDialog */
-
-.modifyOrderLayout {
-  margin-top: 20px;
-  border: 1px solid #ccc;
-  padding: 10px 20px 20px;
-  text-align: left;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-
-.modifyOrder-Dialog {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  /* width: 1000px; */
-  border-radius: 30px;
-  z-index: 2;
-}
-.modifyOrder-container {
-  background-color: white;
-  padding: 30px;
-  text-align: left;
-  color: #777;
-}
 /* 블라인드 */
 .blind-Dialog {
   position: fixed;
@@ -2937,32 +2757,6 @@
   padding: 30px;
   text-align: left;
   color: #777;
-}
-
-.modifyOrderWrapper {
-  display: inline-block;
-}
-
-.modifyOrderLayout .contentBlock {
-  margin-top: 1rem;
-}
-
-.modifyOrderLayout .mainTitle {
-  width: 8rem;
-}
-
-.modifyOrderBtn {
-  margin-top: 3rem;
-  text-align: center;
-}
-
-.orderPayment-wrapper {
-  display: flex;
-}
-
-.orderPayments-wrapper {
-  display: flex;
-  flex-direction: column;
 }
 .blind-title {
   /* font-size: 28px; */
@@ -3038,11 +2832,11 @@
   vertical-align: middle;
 }
 .blindWrapper.bot .callTab {
-  width: 185px;
+  width: 135px;
   height: 40px;
   font-size: 18px;
-  /* margin-top: 12px; */
-  margin-left: 45px;
+  margin-top: 12px;
+  margin-left: 15px;
   display: inline-block;
   vertical-align: middle;
 }
