--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -42,6 +42,12 @@
   text-decoration: underline;
 }
 
+.riderNameTag {
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
+}
+
 .selMulti {
   margin-left: 20px !important;
 }
@@ -522,7 +528,7 @@
 }
 
 .noticeLayout {
-  margin-top: 20px;
+  margin-top: 5px;
   width: 100%;
   overflow-y: scroll;
   border: 1px solid #ccc;
@@ -980,6 +986,15 @@
   margin-left: 20px;
   width: 300px;
 }
+
+.registFranWrapper .override-input.addrText {
+  width: 160px;
+}
+
+.registFranWrapper .override-input.addrBtn {
+  width: 120px;
+}
+
 /* 오른쪽 wrappper */
 .registFranWrapper.sub {
   vertical-align: top;
@@ -2349,7 +2364,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
+  width: 1000px;
   border-radius: 30px;
   z-index: 2;
 }
@@ -2360,10 +2375,10 @@
   text-align: left;
   color: #777;
 }
-
-.registRider-Dialog .layout {
+.registRiderLayout {
   margin-top: 20px;
   width: 100%;
+  /* height:500px; */
   overflow-y: scroll;
   border: 1px solid #ccc;
   padding: 20px 20px;
@@ -2371,12 +2386,8 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
-.registRider-Dialog .layout::-webkit-scrollbar {
+.registRiderLayout::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
-}
-
-.registRdierWrapper .contentBlock {
-  margin-top: 25px;
 }
 
 .registRider-title {
@@ -2396,6 +2407,10 @@
   /* display: inline-block; */
   float: right;
   padding: 8px;
+}
+
+.registRiderWrapper {
+  display: inline-block;
 }
 
 .registRiderWrapper .contentBlock {
@@ -2436,6 +2451,12 @@
 
 .registRiderWrapper .contentBlock .override-input {
   width: 260px !important;
+}
+
+/*오른쪽*/
+.registRiderWrapper.sub {
+  display: inline-block;
+  margin-left: 70px;
 }
 
 .registRider-Dialog .ant-btn {
@@ -3136,6 +3157,32 @@
   text-align: left;
   color: #777;
 }
+
+.modifyOrderWrapper {
+  display: inline-block;
+}
+
+.modifyOrderLayout .contentBlock {
+  margin-top: 1rem;
+}
+
+.modifyOrderLayout .mainTitle {
+  width: 8rem;
+}
+
+.modifyOrderBtn {
+  margin-top: 3rem;
+  text-align: center;
+}
+
+.orderPayment-wrapper {
+  display: flex;
+}
+
+.orderPayments-wrapper {
+  display: flex;
+  flex-direction: column;
+}
 .blind-title {
   /* font-size: 28px; */
   letter-spacing: -1px;
@@ -3210,11 +3257,11 @@
   vertical-align: middle;
 }
 .blindWrapper.bot .callTab {
-  width: 135px;
+  width: 185px;
   height: 40px;
   font-size: 18px;
-  margin-top: 12px;
-  margin-left: 15px;
+  /* margin-top: 12px; */
+  margin-left: 45px;
   display: inline-block;
   vertical-align: middle;
 }
