--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -3274,7 +3274,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
+  width: 700px;
   border-radius: 30px;
   padding: 20px;
   z-index: 2;
@@ -3289,6 +3289,7 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
   padding: 20px;
+  margin-top: 20px;
 }
 
 .snsDialog .container {
@@ -3335,12 +3336,23 @@
 
 .snsLayout .inputBox {
   width: 100%;
-  height: 380px;
 }
 
 .snsLayout .snsInputBox {
-  width: 356px;
-  height: 370px;
+  width: 558px;
+  height: 200px;
   margin-top: 10px;
   margin-left: -10px;
+}
+
+.snsLayout .dataTableLayout-01 {
+  margin-top: 20px;
+}
+
+.snsLayout .submitBtn {
+  float: right;
+  background-color: #fff;
+  border: 1px solid #1890ff;
+  color: #1890ff;
+  box-shadow: none;
 }
