가맹점 등록 및 엑셀파일 버튼 수정

--- a/src/css/franchise.css
+++ b/src/css/franchise.css
@@ -21,6 +21,11 @@
   margin-left: 15px;
 }
 
+.exel img {
+  width: 20px;
+  margin-right: 5px;
+  margin-bottom: 3px;
+}
 /* 상세 */
 /* .franchiseContainer .ant-table-tbody > tr > td > 
 .ant-table-wrapper:only-child .ant-table{
