--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -939,6 +939,34 @@
 .registFranLayout::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
 }
+/* 엑셀업로드 */
+.excel-upload {
+  display: inline-block;
+  float: right;
+  margin-right: 20px;
+}
+.excel-upload .ant-btn-primary {
+  background-color: #f1f1f1;
+  box-shadow: none;
+  border: none;
+  color: #222;
+  padding: 5px 25px;
+  text-align: center;
+  vertical-align: top;
+  margin-bottom: 10px;
+  border-radius: 30px;
+}
+
+.excel-upload .ant-btn-primary:hover {
+  background-color: #1890ff;
+  color: #fff;
+}
+.excel-upload img {
+  width: 20px;
+  margin-right: 5px;
+  vertical-align: bottom;
+}
+
 /* 왼쪽 wrappper */
 .registFranWrapper {
   display: inline-block;
@@ -975,6 +1003,7 @@
 .registFranLayout .contentBlock {
   margin-top: 15px;
 }
+
 .registFranWrapper .ant-form-item {
   margin-bottom: 0px;
 }
@@ -1073,7 +1102,7 @@
   width: 150px;
 }
 .registFranWrapper.bot .selectItem {
-  vertical-align: middle;
+  vertical-align: top;
 }
 .registFranWrapper.bot .override-select {
   margin-left: 10px;
@@ -1088,25 +1117,6 @@
   /* margin-top: 12px; */
   margin-left: 70px;
   vertical-align: middle;
-}
-.registFranWrapper .ant-btn-primary.excel-upload {
-  background-color: #fff;
-  box-shadow: none;
-  color: #222;
-  padding: 5px;
-  text-align: center;
-  vertical-align: top;
-  margin-bottom: 10px;
-}
-
-.registFranWrapper .ant-btn-primary.excel-upload:hover {
-  background-color: #1890ff;
-  color: #fff;
-}
-.excel-upload img {
-  width: 25px;
-  margin-right: 5px;
-  vertical-align: bottom;
 }
 
 /* 코인이체 dialog */
