--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -707,6 +707,14 @@
     width: 260px;
     height: 85px;
   }
+  
+  .notice-content{
+    display: inline-block !important;
+    overflow-wrap: break-word !important;
+    word-wrap: break-word !important;
+    /* max-width: 20px; */
+    /* height: 200px !important; */
+  }
 
   
 .registNoticeDialog .ant-btn {
