--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -543,11 +543,11 @@
   margin-bottom: 20px;
 }
 
-.noticeLayout .ant-checkbox-wrapper{
-  height:32px;
+.noticeLayout .ant-checkbox-wrapper {
+  height: 32px;
   margin-left: 0 !important;
   vertical-align: top;
-} 
+}
 
 .registBtn {
   float: right;
@@ -592,131 +592,130 @@
 
 /* 공지사항 등록 dialog */
 .registNoticeDialog {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 1000px;
-    border-radius: 30px;
-    padding: 20px;
-    z-index: 2;
-  }
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1000px;
+  border-radius: 30px;
+  padding: 20px;
+  z-index: 2;
+}
 
-  .registNotice-content {
-    background-color: white;
-    padding: 30px;
-    text-align: left;
-    color: #777;
-  }
+.registNotice-content {
+  background-color: white;
+  padding: 30px;
+  text-align: left;
+  color: #777;
+}
 
-  .registNotice-title {
-    letter-spacing: -1px;
-    font-weight: bold;
-    color: #333;
-    text-align: right;
-    display: inline-block;
-    font-size: 25px;
-    line-height: 30px;
-  }
+.registNotice-title {
+  letter-spacing: -1px;
+  font-weight: bold;
+  color: #333;
+  text-align: right;
+  display: inline-block;
+  font-size: 25px;
+  line-height: 30px;
+}
 
-  .registNotice-close {
-    width: 30px;
-    cursor: pointer;
-    background-color: #fddc00;
-    /* display: inline-block; */
-    float: right;
-    padding: 8px;
-  }
+.registNotice-close {
+  width: 30px;
+  cursor: pointer;
+  background-color: #fddc00;
+  /* display: inline-block; */
+  float: right;
+  padding: 8px;
+}
 
-  .registNoticeDialog .layout {
-    margin-top: 20px;
-    width: 100%;
-    overflow-y: scroll;
-    border: 1px solid #ccc;
-    padding: 20px 20px;
-    text-align: left;
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-  }
+.registNoticeDialog .layout {
+  margin-top: 20px;
+  width: 100%;
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+  padding: 20px 20px;
+  text-align: left;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 
-  .registNoticeWrapper {
-    display: inline-block;
-  }
+.registNoticeWrapper {
+  display: inline-block;
+}
 
-  .registNoticeWrapper .mainTitle {
-    width: 130px;
-  }
-  
-  .registNoticeCheck {
-    display: inline-block;
-    margin-left: 20px;
-    height: 31.7px;
-  }
+.registNoticeWrapper .mainTitle {
+  width: 130px;
+}
 
-  .registNoticeDialog .layout::-webkit-scrollbar {
-    display: none; /* Chrome, Safari, Opera*/
-  }
+.registNoticeCheck {
+  display: inline-block;
+  margin-left: 20px;
+  height: 31.7px;
+}
 
-  .registNoticeDialog .layout .contentBlock {
-    margin-top: 25px;
-  }
+.registNoticeDialog .layout::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
 
-  .registNoticeWrapper .submitBlock {
-    margin-top: 20px;
-    text-align: right;
-  }
+.registNoticeDialog .layout .contentBlock {
+  margin-top: 25px;
+}
 
-  .registNoticeWrapper .clearBtn {
-    margin-left: 20px;
-  }
+.registNoticeWrapper .submitBlock {
+  margin-top: 20px;
+  text-align: right;
+}
 
-  .registNoticeWrapper .contentBlock .override-select.branch {
-    width: 240px;
-  }
+.registNoticeWrapper .clearBtn {
+  margin-left: 20px;
+}
 
-  .registNoticeWrapper .override-select.sub {
-    width: 270px !important;
-  }
+.registNoticeWrapper .contentBlock .override-select.branch {
+  width: 240px;
+}
 
-  .registNoticeWrapper .contentBlock .override-input {
-    width: 260px;
-    margin-left: 0 !important;
-  }
+.registNoticeWrapper .override-select.sub {
+  width: 270px !important;
+}
 
-  .registNoticeWrapper .ant-radio-group {
-    margin-left: 20px;
-  }
+.registNoticeWrapper .contentBlock .override-input {
+  width: 260px;
+  margin-left: 0 !important;
+}
 
-  .registNoticeWrapper span.ant-radio + * {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
+.registNoticeWrapper .ant-radio-group {
+  margin-left: 20px;
+}
 
-  .registNoticeDialog .ant-btn {
-    width: 130px;
-    height: 40px !important;
-    font-size: 18px !important;
-  }
+.registNoticeWrapper span.ant-radio + * {
+  padding-left: 5px;
+  padding-right: 5px;
+}
 
-  .registNoticeWrapper.sub {
-    display: inline-block;
-    margin-left: 70px;
-  }
+.registNoticeDialog .ant-btn {
+  width: 130px;
+  height: 40px !important;
+  font-size: 18px !important;
+}
 
-  .registNoticeWrapper.sub .contentBlock .override-input {
-    width: 260px;
-    height: 85px;
-  }
-  
-  .notice-content{
-    display: inline-block !important;
-    overflow-wrap: break-word !important;
-    word-wrap: break-word !important;
-    /* max-width: 20px; */
-    /* height: 200px !important; */
-  }
+.registNoticeWrapper.sub {
+  display: inline-block;
+  margin-left: 70px;
+}
 
-  
+.registNoticeWrapper.sub .contentBlock .override-input {
+  width: 260px;
+  height: 85px;
+}
+
+.notice-content {
+  display: inline-block !important;
+  overflow-wrap: break-word !important;
+  word-wrap: break-word !important;
+  /* max-width: 20px; */
+  /* height: 200px !important; */
+}
+
 .registNoticeDialog .ant-btn {
   width: 130px;
   height: 40px;
@@ -3262,9 +3261,8 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -65%);
+  transform: translate(-50%, -50%);
   width: 1000px;
-  height: 500px;
   border-radius: 30px;
   z-index: 2;
 }
@@ -3296,7 +3294,7 @@
 .blindLayout {
   margin-top: 20px;
   width: 100%;
-  height: 350px;
+  /* height: 350px; */
   overflow-y: scroll;
   border: 1px solid #ccc;
   padding: 20px;
@@ -3307,6 +3305,16 @@
 .blindLayout::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
 }
+.blindLayout .elipsis-table-row {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 130px;
+  display: inline-block;
+  vertical-align: middle;
+  /* text-align: center; */
+}
+
 .blindWrapper.bot {
   margin-top: 10px;
   text-align: left;
@@ -3321,14 +3329,14 @@
   /* font-size: 20px; */
   vertical-align: middle;
   font-weight: bold;
-  width: 75px;
+  /* width: 75px; */
 }
 .blindWrapper.bot .subTitle {
   font-size: 18px;
   vertical-align: middle;
   font-weight: bold;
   /* width: 70px; */
-  margin-left: 20px;
+  margin-left: 15px;
 }
 .blindWrapper.bot .ant-checkbox-inner {
   width: 20px;
