--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2882,7 +2882,8 @@
   margin-top: -20px;
 }
 
-.serchAddress-Dialog .layout .contentbox span {
+.serchAddress-Dialog .layout .contentbox,
+.contentBlock span {
   font-size: 16px;
 }
 
@@ -2903,7 +2904,7 @@
 }
 
 .serchAddress-Dialog .layout .dataTableLayout-01 {
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .serchAddress-Dialog .ant-table-content thead th {
@@ -2919,6 +2920,7 @@
   font-size: 20px;
   font-weight: bold;
 }
+
 .contentbox {
   display: inline-block;
   width: 450px;
@@ -2926,7 +2928,7 @@
   margin-left: 30px;
 }
 
-.contentbox-02 {
+.second {
   display: inline-block;
   width: 580px;
   vertical-align: top;
@@ -2945,6 +2947,11 @@
   width: 120px;
   margin-left: 20px;
 }
+
+.serchAddress-Dialog .contentBlock .addrBtn span {
+  font-size: 14px;
+}
+
 .serchAddress-Dialog .contentBlock .mainTitle {
   font-size: 16x;
   width: 80px;
