--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -291,6 +291,7 @@
   height: 100%;
   width: 100%;
 }
+
 .map-title {
   font-size: 25px;
   font-weight: bold;
@@ -2960,6 +2961,32 @@
   width: 210px;
 }
 
+/* 지도 Dialog */
+
+.map-address-Dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%, -50%);
+  width: 130%;
+  height: 100%;
+  border-radius: 0;
+  z-index: 5;
+}
+.map-address-Dialog .map-close {
+  margin: 10px;
+}
+.map-address-Dialog .mapLayout {
+  overflow: hidden;
+}
+.map-address-btn {
+  float: right;
+  margin: -70px 460px;
+}
+.searchAddress-btn .map-address-btn .map-btn .ant-btn-primary {
+  padding: 5px 15px;
+}
 /* 강제배차 Dialog */
 
 .forceAllocate-Dialog {
