--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1163,12 +1163,12 @@
   width: 200px;
   margin-right: 10px;
 }
-.registFranWrapper.sub .callTab {
+/* .registFranWrapper.sub .callTab {
   width: 400px;
   height: 40px;
   font-size: 18px;
   margin-top: 60px;
-}
+} */
 /* 하단 랩퍼 */
 .registFranWrapper.bot {
   width: 100%;
@@ -1205,11 +1205,16 @@
 }
 .registFranWrapper.bot .selectItem {
   vertical-align: top;
+  margin-right: 30px;
 }
-.registFranWrapper.bot .callTab {
+
+.registFranWrapper .contentBlock .callTab {
   width: 185px;
   height: 40px;
   font-size: 18px;
+  margin-top: -5px;
+  margin-right: 5px;
+  float: right;
 }
 
 /* 코인이체 dialog */
