--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2832,12 +2832,14 @@
   border-radius: 30px;
   z-index: 2;
 }
+
 .serchAddress-content {
   background-color: white;
   padding: 30px;
   text-align: left;
   color: #777;
 }
+
 .serchAddress-title {
   letter-spacing: -1px;
   font-weight: bold;
@@ -2847,6 +2849,7 @@
   font-size: 25px;
   line-height: 30px;
 }
+
 .serchAddress-close {
   width: 30px;
   cursor: pointer;
@@ -2865,37 +2868,32 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
-.serchAddressWrapper {
-  padding-bottom: 20px;
-  border-bottom: 1px solid #b5b5b5;
-  margin-bottom: 20px;
-}
 
 .serchAddress-Dialog .layout .contentBlock {
   display: inline-block;
-  margin-bottom: 10px;
+  line-height: 20px;
 }
 
-.serchAddress-Dialog .layout .first {
+.serchAddress-Dialog .layout .contentBlock span {
+  font-size: 18px;
+}
+
+.serchAddress-list {
   display: inline-block;
-  margin-bottom: 10px;
-  margin-top: -20px;
+  vertical-align: bottom;
 }
-
-.serchAddress-Dialog .layout .contentbox span {
-  font-size: 16px;
+.serchAddress-list input {
+  width: 400px;
 }
 
 .searchAddress-btn {
   display: inline-block;
-  margin: 10px 0px 10px 30px;
   vertical-align: bottom;
 }
 
 .searchAddress-btn .ant-btn-primary {
   background-color: black;
   border-style: none;
-  width: 100px;
 }
 .serchAddress-searchbox {
   float: right;
@@ -2911,46 +2909,7 @@
 }
 
 .serchAddress-Dialog .layout .ant-table-tbody > tr > td {
-  padding: 0px;
-}
-
-.searchAddress-name {
-  display: inline-block;
-  font-size: 20px;
-  font-weight: bold;
-}
-.contentbox {
-  display: inline-block;
-  width: 450px;
-  vertical-align: top;
-  margin-left: 30px;
-}
-
-.contentbox-02 {
-  display: inline-block;
-  width: 580px;
-  vertical-align: top;
-  margin-left: 30px;
-}
-
-.serchAddress-Dialog .searchRequirement {
-  margin-top: 0 !important;
-  margin-left: 20px;
-}
-.serchAddress-Dialog .contentBlock .override-input {
-  width: 350px;
-  vertical-align: middle;
-}
-.serchAddress-Dialog .contentBlock .addrBtn {
-  width: 120px;
-  margin-left: 20px;
-}
-.serchAddress-Dialog .contentBlock .mainTitle {
-  font-size: 16x;
-  width: 80px;
-}
-.serchAddress-Dialog .contentBlock .short {
-  width: 210px;
+  padding: 0;
 }
 
 /* 강제배차 Dialog */
@@ -3564,23 +3523,143 @@
   margin-top: 15px;
 }
 
-/* chatting */
-.Modal-overlay {
+/* 할증 가맹점 추가 dialog */
+.surchargeFr-Dialog-overlay {
   position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.56);
-  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
-.Modal-chat {
-  z-index: 20;
+
+.surchargeFr-Dialog {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 10px;
-  width: 900px;
-  height: 700px;
+  width: 650px;
+  border-radius: 30px;
+  z-index: 2;
+}
+
+.surchargeFr-content {
+  background-color: white;
+  padding: 30px;
+  /* text-align: left; */
+  /* color: #777; */
+}
+
+.surchargeFr-title {
+  letter-spacing: -1px;
+  font-weight: bold;
+  color: #333;
+  text-align: right;
+  display: inline-block;
+  font-size: 25px;
+  line-height: 30px;
+}
+
+.surchargeFr-close {
+  width: 30px;
+  cursor: pointer;
+  background-color: #fddc00;
+  /* display: inline-block; */
+  float: right;
+  padding: 8px;
+}
+
+.surchargeFr-Dialog .addRiderlayout {
+  height: 540px;
+}
+
+.surchargeFrWrapper .contentBlock {
+  margin-top: 30px !important;
+}
+
+.surchargeFrWrapper .contentBlock .selectItem .override-select {
+  width: 345px;
+}
+
+.surchargeFr-Dialog .dataTableBlock {
+  margin-top: 40px;
+}
+
+.surchargeFrWrapper .submitBlock {
+  margin-top: 30px;
+  text-align: center;
+}
+
+/* 할증 그룹 관리 dialog */
+.surchargeGroup-Dialog-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.surchargeGroup-Dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 450px;
+  border-radius: 30px;
+  z-index: 2;
+}
+
+.surchargeGroup-content {
+  background-color: white;
+  padding: 30px;
+  /* text-align: left; */
+  /* color: #777; */
+}
+
+.surchargeGroup-title {
+  letter-spacing: -1px;
+  font-weight: bold;
+  color: #333;
+  text-align: right;
+  display: inline-block;
+  font-size: 25px;
+  line-height: 30px;
+}
+
+.surchargeGroupWrapper {
+  margin-top: 20px;
+}
+.surchargeGrouplayout .contentBlock {
+  width: 400px;
+}
+
+.surchargeGrouplayout .contentBlock .override-input {
+  width: 300px;
+}
+
+.surchargeGroup-close {
+  width: 30px;
+  cursor: pointer;
+  background-color: #fddc00;
+  /* display: inline-block; */
+  float: right;
+  padding: 8px;
+}
+
+.surchargeGroup-Dialog .addGrouplayout {
+  height: 100px;
+}
+
+.surchargeGroupWrapper .submitBlock {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.surchargeGroupWrapper .ant-btn-primary {
+  width: 130px;
+  height: 40px;
+  font-size: 18px;
 }
