--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2331,7 +2331,6 @@
 
 .riderGroup-inner {
   width: 100%;
-  height: 610px;
   overflow-y: scroll;
   border: 1px solid #ccc;
   padding: 20px;
@@ -2483,7 +2482,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 1000px;
+  width: 960px;
   border-radius: 30px;
   z-index: 2;
 }
@@ -2530,6 +2529,7 @@
 
 .registRiderWrapper {
   display: inline-block;
+  vertical-align: top;
 }
 
 .registRiderWrapper .contentBlock {
@@ -2541,7 +2541,7 @@
 }
 
 .registRiderWrapper .mainTitle {
-  width: 130px;
+  width: 120px;
 }
 
 .registRiderCheck {
@@ -2578,6 +2578,7 @@
 .registRiderWrapper.sub {
   display: inline-block;
   margin-left: 70px;
+  width: 400px;
 }
 
 .registRider-Dialog .ant-btn {
@@ -2587,12 +2588,18 @@
 }
 
 .giveBox {
+  width: 280px;
 }
 
 .giveBox .ant-checkbox-wrapper {
-  width: 86px;
+  width: 90px;
   margin: 0px !important;
 }
+
+.registRiderWrapper.sub .submitBlock {
+  width: 390px;
+}
+
 /*직원 등록*/
 .registStaff-Dialog {
   position: fixed;
