일차감 목록 수정

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2540,6 +2540,10 @@
   width: 260px;
 }
 
+.registRiderWrapper .ant-form-item-control-input-content .ant-checkbox + span {
+  padding-right: 0;
+}
+
 .registRiderWrapper .mainTitle {
   width: 120px;
 }
