--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -286,6 +286,10 @@
   z-index: 2;
 }
 
+.map-Dialog .layout::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+
 .map-content {
   background-color: white;
   height: 100%;
@@ -317,6 +321,17 @@
   width: 100%;
   /* border: 1px solid #ccc;  */
   text-align: left;
+}
+
+.callDataTable {
+  width: 25%;
+  position: absolute;
+  top: 35%;
+}
+
+.table-column-center.arrive {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .riderListInMapControl {
@@ -873,7 +888,7 @@
   transform: translate(-50%, -50%);
   width: 1200px;
   border-radius: 30px;
-  z-index: 2;
+  z-index: 3;
 }
 .registCall-container {
   background-color: white;
