1. 지도관제 경로 프랜차이저 들르도록 수정

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -290,6 +290,12 @@
   display: none; /* Chrome, Safari, Opera*/
 }
 
+.assign-rider-btn {
+  position: absolute;
+  top: 10%;
+  left: 24.95%;
+}
+
 .map-content {
   background-color: white;
   height: 100%;
