--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -749,7 +749,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -65%);
+  transform: translate(-50%, -60%);
   width: 1000px;
   border-radius: 30px;
   z-index: 2;
@@ -792,6 +792,10 @@
 .surchargeLayout::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
 }
+.surchargeLayout .ant-checkbox-wrapper {
+  margin-left: 5px !important;
+  vertical-align: middle;
+}
 .selectBlock .ant-form-item {
   margin-bottom: 0px;
 }
@@ -813,6 +817,38 @@
   margin-top: 20px;
   padding-top: 20px;
   border-top: 1px solid #b5b5b5;
+}
+.surchargeLayout .checkbox {
+  display: inline-block;
+  margin-top: 20px;
+  font-size: 15px;
+}
+.surchargeLayout .radio-btn {
+  display: inline-block;
+  margin-top: 20px;
+  margin-left: 30px;
+  font-size: 15px;
+}
+.surchargeLayout .searchRequirement {
+  margin-top: 0 !important;
+  margin-left: 10px;
+}
+.surchargeLayout .search-input {
+  margin-left: 10px;
+  display: inline-block;
+  font-size: 15px;
+}
+.surchargeLayout .selectItem {
+  display: inline-block;
+}
+.surchargeLayout .selectItem .ant-btn {
+  top: 13px;
+}
+.surchargeLayout .override-input.sub {
+  /* margin-left: -30px; */
+  margin-left: 10px;
+  top: 13px;
+  width: 135px;
 }
 
 .mainTitle {
