공지사항 디자인 완료

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -631,6 +631,12 @@
   width: 100%;
 }
 
+.noticeTag {
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
+}
+
 /* 공지사항 등록 dialog */
 .registNoticeDialog {
   position: fixed;
