--- a/src/css/index.css
+++ b/src/css/index.css
@@ -124,9 +124,11 @@ body {
 
 .table-column-content {
   text-align: left;
-  border: 1px solid black;
-  background-color: yellow;
-  margin-top: 10px;
+  border: 1px solid #d1d1d1;
+  background-color: #f5f5f5;
+  margin-bottom: 10px;
+  padding: 10px 15px 10px 20px;
+  word-break: keep-all;
 }
 
 
