할증 및 블라인드 페이지네이션 및 할증 그룹 표 간격 수정

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -109,6 +109,11 @@ body {
   text-align: center !important;
 }
 
+/* .table-column-surGroup{
+  text-align: center;
+  width: 50%;
+} */
+
 .table-column-left {
   display: inline-block;
   width: 550;
