메인-결제방식 모달 ui 수정 완료

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -3582,10 +3582,93 @@
 }
 
 /* paymentModal */
+
+.payment-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* width: 1000px; */
+  z-index: 2;
+  background-color: white;
+  padding: 30px;
+  text-align: left;
+  color: #777;
+}
+.payment-container div {
+  display: block;
+}
+.detail-title {
+  /* font-size: 28px; */
+  letter-spacing: -1px;
+  font-weight: bold;
+  color: #333;
+  font-size: 25px;
+  line-height: 30px;
+}
+.detail-title > div:first-child {
+  display: inline-block;
+}
+.detail-title > div:last-child {
+  width: 30px;
+  height: 30px;
+  background-color: #fddc00;
+  cursor: pointer;
+  float: right;
+}
+.detail-title > div:last-child img {
+  width: 14px;
+  margin: 4px 8px 8px 8px;
+}
+.detail-content {
+  margin-top: 20px;
+  width: 100%;
+  /* height: 510px;  */
+  border: 1px solid #ccc;
+  padding: 20px;
+  text-align: left;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.detail-content::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+.split-content-title {
+  font-weight: bold;
+  font-size: 18px;
+  color: black;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 10px;
+}
+.split-content-title > div:first-child {
+  display: inline-block;
+}
+.split-content-title > div:last-child {
+  float: right;
+  right: 0;
+}
+.split-payment-box {
+  padding: 25px 20px 15px 20px;
+  width: 410px;
+  height: auto;
+}
+.split-payment-box div {
+  display: inline-block;
+}
+.split-payment-box > div:first-child {
+  margin-bottom: 0;
+}
+.split-bottom-box {
+  border-top: 1px solid #ccc;
+  font-size: 18px;
+  font-weight: bold;
+  color: black;
+  padding-top: 20px;
+  text-align: center;
+}
 .orderPayment-wrapper {
   display: flex;
 }
-
 .orderPayments-wrapper {
   display: flex;
   flex-direction: column;
@@ -3598,6 +3681,7 @@
   text-align: center;
   width: 100px;
 }
+
 /*sns전송ㅇ*/
 .snsDialog {
   position: fixed;
@@ -4008,7 +4092,6 @@
   width: 900px;
   height: 700px;
 }
-
 .error-message {
   color: red;
 }
