가맹점등록 modal ui

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1208,14 +1208,23 @@
 /* 왼쪽 wrappper */
 .registFranWrapper {
   display: inline-block;
+ 
 }
 .registFranTitle {
-  /* display: inline-block; */
+  display: inline-block;
   font-size: 20px;
   vertical-align: middle;
   font-weight: bold;
   color: #1890ff;
-  /* margin-bottom: 30px; */
+  width:875px;
+  margin-bottom: 30px;
+}
+.registFranTitle-sub{
+  display: inline-block;
+}
+.registFran-radio{
+  display: inline-block;
+  float:right;
 }
 .registFranWrapper .mainTitle {
   display: inline-block;
@@ -1278,9 +1287,10 @@
 .registFranWrapper.sub {
   vertical-align: top;
   display: inline-block;
-  /* width: 340px; */
-  /* margin-top: 46px; */
-  margin-left: 40px;
+  /* width: 340px; 
+   margin-top: 46px; */
+  margin-left: 30px;
+  clear:both;
 }
 .registFranWrapper.sub .mainTitle {
   display: inline-block;
